<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/currentLocation"
        android:title="定位"
        app:showAsAction="always"/>
    <item
        android:id="@+id/maptype"
        android:title="地圖"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/mapTypeNormal"
                android:title="@string/mapTypeNormal"/>
            <item
                android:id="@+id/mapTypeSatellite"
                android:title="@string/mapTypeSatellite"/>
            <item
                android:id="@+id/mapTypeHybrid"
                android:title="@string/mapTypeHybrid"/>
        </menu>
    </item>
</menu>